--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 .card {
   width: 370px;
-  height: 190px;
+  height: 210px;
   background: black;
   margin: 100px auto;
   border-radius: 20px;
@@ -35,4 +35,31 @@ img {
 .uppar .left{
     display: flex;
     flex-direction: row;
+}
+.middle{
+    margin-top: 15%;
+    color: aliceblue;
+}
+.middle h3{
+    padding-top: 5px;
+}
+.lower{
+    display: flex;
+    justify-content: space-between;
+    color: aliceblue;
+}
+.lower .left{
+    margin-top: 5%;
+    
+}
+.lower .right{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    
+}
+.lower .right p{
+    padding-top: 5px;
+    font-size: 15px;
 }
